# AutoTool-BuildC-

./: Makefile  Makefile.am  Makefile.in  README.md  build.sh  config.h  config.status  configure  configure.ac  hello
.deps/: HelloWorld.Po  main.Po  module1.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
main/: main.cpp
module1/: module1.cpp
